# docx2csv

./: .coveragerc  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  docx2csv  docx2csv.py  flake8  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.md  conf.py  conf.rst  docx2csv.rst  index.md  index.rst  installation.md  installation.rst  modules.rst  usage.md  usage.rst
docx2csv/: __init__.py  __main__.py  converter.py  core.py  docx2csv.py  requirements.txt
examples/: peretchenb_utchastkovyh_izbiratelbnyh_komissiy_2_version.docx  peretchenb_utchastkovyh_izbiratelbnyh_komissiy_2_version_1.csv  peretchenb_utchastkovyh_izbiratelbnyh_komissiy_2_version_1.xls  reg_2015.docx  reg_2015_1.csv  reg_2015_1.xls
tests/: conftest.py  test_cli.py  test_converter.py
