[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx2csv"
dynamic = ["version"]
description = "Extracts tables from .docx files and saves them as csv or xlsx"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Ivan Begtin", email = "ivan@begtin.tech"},
]
requires-python = ">=3.8"
keywords = ["docx", "converter", "tables"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.6",
    "openpyxl>=3.1.2",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
xls = ["xlwt>=1.3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
]

[project.scripts]
docx2csv = "docx2csv.__main__:main"

[project.urls]
Homepage = "https://github.com/ivbeg/docx2csv"

[tool.setuptools.dynamic]
version = {attr = "docx2csv.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
